[SCons/Doc] Fix installation of Doxygen docs
Fixes regression introduced in b84d3e3, where the organization of files in the built
documentation changed.

Fixes #553

--- a/doc/SConscript
+++ b/doc/SConscript
@@ -100,8 +100,8 @@ if localenv['doxygen_docs']:
                       mglob(env, '#src/cantera/*', 'h', 'cpp'))
 
     env.Alias('doxygen', docs)
-    install('$inst_docdir/doxygen/html',
-            mglob(localenv, '#/build/docs/doxygen/html', 'html', 'svg', 'css', 'png'))
+    install(localenv.RecursiveInstall, '$inst_docdir/doxygen/html',
+            '#/build/docs/doxygen/html', exclude=['\\.map', '\\.md5'])
 
 if localenv['sphinx_docs']:
     localenv['SPHINXBUILD'] = Dir('#build/docs/sphinx')
