--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -32,7 +32,8 @@ else:
     localenv['ENV']['PYTHON_CMD'] = localenv.subst('$python_cmd')
     haveConverters = True
 
-localenv['ENV']['CANTERA_DATA'] = pjoin(os.getcwd(), '..', 'build', 'data')
+localenv['ENV']['CANTERA_DATA'] = (Dir('#build/data').abspath + os.pathsep +
+                                   Dir('#test/data').abspath)
 
 # Add build/lib in order to find Cantera shared library
 if env['OS'] == 'Windows' or env['OS'] == 'Cygwin':
@@ -183,7 +184,7 @@ Test('DH_graph_Pitzer', 'cathermo/DH_graph_1',
 CompileAndTest('HMW_graph_CpvT', 'cathermo/HMW_graph_CpvT',
                'HMW_graph_CpvT', 'output_blessed.txt',
                extensions=['^HMW_graph_CpvT.cpp'],
-               arguments='HMW_NaCl_sp1977_alt.xml')
+               arguments=File('#test/data/HMW_NaCl_sp1977_alt.xml').abspath)
 CompileAndTest('HMW_graph_GvI', 'cathermo/HMW_graph_GvI',
                'HMW_graph_GvI', None,
                comparisons=[('T298_blessed.csv', 'T298.csv'),
@@ -193,15 +194,15 @@ CompileAndTest('HMW_graph_GvI', 'cathermo/HMW_graph_GvI',
 CompileAndTest('HMW_graph_GvT', 'cathermo/HMW_graph_GvT',
                'HMW_graph_GvT', 'output_blessed.txt',
                extensions=['^HMW_graph_GvT.cpp'],
-               arguments='HMW_NaCl_sp1977_alt.xml')
+               arguments=File('#test/data/HMW_NaCl_sp1977_alt.xml').abspath)
 CompileAndTest('HMW_graph_HvT', 'cathermo/HMW_graph_HvT',
                'HMW_graph_HvT', 'output_blessed.txt',
                extensions=['^HMW_graph_HvT.cpp'],
-               arguments='HMW_NaCl_sp1977_alt.xml')
+               arguments=File('#test/data/HMW_NaCl_sp1977_alt.xml').abspath)
 CompileAndTest('HMW_graph_VvT', 'cathermo/HMW_graph_VvT',
                'HMW_graph_VvT', 'output_blessed.txt',
                extensions=['^HMW_graph_VvT.cpp'],
-               arguments='HMW_NaCl_sp1977_alt.xml')
+               arguments=File('#test/data/HMW_NaCl_sp1977_alt.xml').abspath)
 CompileAndTest('HMW_test_1', 'cathermo/HMW_test_1',
                'HMW_test_1', 'output_noD_blessed.txt')
 CompileAndTest('HMW_test_3', 'cathermo/HMW_test_3',
