--- a/interfaces/cython/.gitignore
+++ b/interfaces/cython/.gitignore
@@ -7,8 +7,7 @@ cantera/test/data/*.xml
 cantera/test/data/*.inp
 cantera/test/data/*.dat
 cantera/test/data/*.csv
-setup2.py
-setup3.py
+setup.py
 scripts/ctml_writer.py
 scripts/ctml_writer
 scripts/ck2cti.py
