--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -19,13 +19,9 @@ if localenv['OS'] == 'Linux':
 else:
     cantera_libs = localenv['cantera_libs']
 
-if localenv['python2_package'] in ('full', 'minimal'):
-    localenv['ENV']['PYTHONPATH'] = localenv['pythonpath_build2']
-    localenv['ENV']['PYTHON_CMD'] = localenv.subst('$python2_cmd')
-    haveConverters = True
-elif localenv['python3_package'] in ('full', 'minimal'):
-    localenv['ENV']['PYTHONPATH'] = localenv['pythonpath_build3']
-    localenv['ENV']['PYTHON_CMD'] = localenv.subst('$python3_cmd')
+if localenv['python_package'] in ('full', 'minimal'):
+    localenv['ENV']['PYTHONPATH'] = localenv['pythonpath_build']
+    localenv['ENV']['PYTHON_CMD'] = localenv.subst('$python_cmd')
     haveConverters = True
 else:
     localenv['ENV']['PYTHONPATH'] = '../../build/python_minimal'
