[SCons] Use Cython from the targeted copy of Python
Use the Cython module from the Python installation specified by
'python_cmd', rather than the Python installation that is running
SCons. This allows complilation of Cantera for Python versions that
aren't supported by SCons (e.g. Python 3.4).

--- a/interfaces/cython/SConscript
+++ b/interfaces/cython/SConscript
@@ -1,16 +1,15 @@
 """Cython-based Python Module"""
 from buildutils import *
-import Cython.Build
 
 Import('env', 'build', 'install')
 
 localenv = env.Clone()
 
-def cythonize(target, source, env):
-    Cython.Build.cythonize([f.abspath for f in source])
+cythonized = localenv.Command(
+    'cantera/_cantera.cpp',
+    'cantera/_cantera.pyx',
+    '''${python_cmd} -c "import Cython.Build; Cython.Build.cythonize('${SOURCE}')"''')
 
-cythonized = localenv.Command('cantera/_cantera.cpp', ['cantera/_cantera.pyx'],
-                              cythonize)
 for f in mglob(localenv, 'cantera', 'pyx', 'pxd'):
     localenv.Depends(cythonized, f)
 
