--- a/test/SConscript
+++ b/test/SConscript
@@ -238,20 +238,12 @@ def addMatlabTest(script, testName, dependencies=None, env_vars=()):
 
     return run_program
 
-if localenv['python_package'] in ('full', 'minimal'):
-    python_env_vars = {'PYTHONPATH': localenv['pythonpath_build'],
-                       'PYTHON_CMD': localenv.subst('$python_cmd')}
-else:
-    python_env_vars = {'PYTHONPATH': '../../build/python_minimal',
-                       'PYTHON_CMD': localenv.subst('$python_cmd')}
-
-
 # Instantiate tests
-addTestProgram('general', 'general', env_vars=python_env_vars)
-addTestProgram('thermo', 'thermo', env_vars=python_env_vars)
-addTestProgram('equil', 'equil', env_vars=python_env_vars)
-addTestProgram('kinetics', 'kinetics', env_vars=python_env_vars)
-addTestProgram('transport', 'transport', env_vars=python_env_vars)
+addTestProgram('general', 'general')
+addTestProgram('thermo', 'thermo')
+addTestProgram('equil', 'equil')
+addTestProgram('kinetics', 'kinetics')
+addTestProgram('transport', 'transport')
 
 python_subtests = ['']
 test_root = '#interfaces/cython/cantera/test'
@@ -271,15 +263,13 @@ if localenv['python_package'] == 'full':
             outfile=File('#test/work/python-results.txt').abspath,
             dependencies=(localenv['python_module'] + localenv['python_extension'] +
                           mglob(localenv, test_root, 'py')),
-            env_vars={'PYTHONPATH': localenv['pythonpath_build']},
             optional=bool(subset))
         localenv.Alias('test-' + name, pyTest)
         env['testNames'].append(name)
 
 if localenv['matlab_toolbox'] == 'y':
     matlabTest = addMatlabTest('runCanteraTests.m', 'matlab',
-                               dependencies=mglob(localenv, 'matlab', 'm'),
-                               env_vars=python_env_vars)
+                               dependencies=mglob(localenv, 'matlab', 'm'))
     localenv.Alias('test-matlab', matlabTest)
     env['testNames'].append('matlab')
 
