--- a/doc/SConscript
+++ b/doc/SConscript
@@ -206,3 +206,5 @@ if localenv['sphinx_docs']:
         localenv.Depends(sphinxdocs, c)
 
     localenv.AlwaysBuild(sphinxdocs)
+    install(localenv.RecursiveInstall, '$inst_docdir/sphinx/html',
+            '#/build/docs/sphinx/html')
