--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -2,7 +2,7 @@ from buildutils import *
 
 Import('env', 'build', 'install', 'buildSample')
 
-# (subdir, program name, [source extensions])
+# (subdir, program name, [source extensions], openmp_flag)
 samples = [
     ('combustor', 'combustor', ['cpp'], False),
     ('flamespeed', 'flamespeed', ['cpp'], False),
@@ -10,7 +10,8 @@ samples = [
     ('NASA_coeffs', 'NASA_coeffs', ['cpp'], False),
     ('rankine', 'rankine', ['cpp'], False),
     ('LiC6_electrode', 'LiC6_electrode', ['cpp'], False),
-    ('openmp_ignition', 'openmp_ignition', ['cpp'], True)
+    ('openmp_ignition', 'openmp_ignition', ['cpp'], True),
+    ('bvp', 'blasius', ['cpp', 'h'], False)
 ]
 
 for subdir, name, extensions, openmp in samples:
