--- a/test/data/thermo-models.yaml
+++ b/test/data/thermo-models.yaml
@@ -169,6 +169,12 @@ phases:
     A_Debye: variable
     interactions: *hmw-ineractions
 
+- name: CO2-RK
+  species: [{gas-species: [CO2, H2O, H2]}]
+  thermo: Redlich-Kwong
+  state: {T: 300, P: 200 atm, mole-fractions: {CO2: 0.9998, H2O: 0.0002}}
+
+
 species:
 - name: NaCl(s)
   composition: {Na: 1, Cl: 1}
@@ -403,6 +409,10 @@ gas-species:
       -950.158922, -3.20502331]
   standard-state:
     model: ideal-gas
+  Redlich-Kwong:
+    units: {length: cm, pressure: bar, quantity: mol}
+    a: [3.0e+08, -3.30e+06]
+    b: 31.0
 - name: H2O
   composition: {H: 2, O: 1}
   thermo:
@@ -415,6 +425,12 @@ gas-species:
       -30004.2971, 4.9667701]
   standard-state:
     model: ideal-gas
+  Redlich-Kwong:
+    a: [1.7458e+08 bar*cm^6/mol^2*K^0.5, -8.0e+04 bar*cm^6/mol^2*K^-0.5]
+    b: 18.18 cm^3/mol
+    binary-a:
+      H2: [4 bar*cm^6/mol^2*K^0.5, 40 bar*cm^6/mol^2*K^-0.5]
+      CO2: 7.897e7 bar*cm^6/mol^2*K^0.5
 - name: O2
   composition: {O: 2}
   thermo:
@@ -427,6 +443,20 @@ gas-species:
       -1088.45772, 5.45323129]
   standard-state:
     model: ideal-gas
+- name: CO2
+  composition: {C: 1, O: 2}
+  thermo:
+    model: NASA7
+    temperature-ranges: [200.0, 1000.0, 3500.0]
+    data:
+    - [2.35677352, 0.00898459677, -7.12356269e-06, 2.45919022e-09, -1.43699548e-13,
+      -48371.9697, 9.90105222]
+    - [3.85746029, 0.00441437026, -2.21481404e-06, 5.23490188e-10, -4.72084164e-14,
+      -48759.166, 2.27163806]
+  Redlich-Kwong:
+    units: {length: cm, pressure: bar, quantity: mol}
+    a: [7.54e7, -4.13e4]
+    b: 27.80
 
 
 HMW-species:
