--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,6 @@ script: |
       scons test
   fi
 after_success: |
-  if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       bash <(curl -s https://codecov.io/bash)
   fi
