--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -23,10 +23,11 @@ find_package(OpenMP REQUIRED)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
 set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS})
 """
-    elif env["OS"] == "Darwin":
-        localenv["cmake_extra"] = "find_library(ACCELERATE_FRAMEWORK Accelerate)"
     else:
         localenv['cmake_extra'] = ''
+
+    if env["OS"] == "Darwin":
+        localenv["cmake_extra"] += "find_library(ACCELERATE_FRAMEWORK Accelerate)"
 
     buildSample(localenv.Program, pjoin(subdir, name),
                 mglob(localenv, subdir, *extensions),
