--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -18,6 +18,9 @@ for subdir, name, extensions, openmp in samples:
     localenv = env.Clone()
     if openmp:
         localenv.Append(CXXFLAGS=env['openmp_flag'], LINKFLAGS=env['openmp_flag'])
+        if env['using_apple_clang']:
+            localenv.Append(LIBS=['omp'])
+
         localenv['cmake_extra'] = """
 find_package(OpenMP REQUIRED)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS})
@@ -28,6 +31,8 @@ set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS})
 
     if env["OS"] == "Darwin":
         localenv["cmake_extra"] += "find_library(ACCELERATE_FRAMEWORK Accelerate)"
+
+    localenv.Append(LIBS=env['cantera_libs'])
 
     buildSample(localenv.Program, pjoin(subdir, name),
                 mglob(localenv, subdir, *extensions),
