--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 sudo: false
-dist: trusty
+dist: xenial
 os:
   - linux
   - osx
@@ -11,6 +11,7 @@ addons:
       - python3-dev
       - python3-numpy
       - python3-setuptools
+      - scons
       - gfortran
       - libsundials-serial-dev
       - liblapack-dev
