[Cython/Test] Install test subdirs in Cython interface
The tests now include subdirectories with data files, so those should be
installed with the rest of the data files

--- a/interfaces/cython/setup.py.in
+++ b/interfaces/cython/setup.py.in
@@ -92,7 +92,7 @@ setup(
     ],
     package_data = {
         'cantera.data': ['*.*'],
-        'cantera.test.data': ['*.*'],
+        'cantera.test.data': ['*.*', '*/*.*'],
         'cantera.examples': ['*/*.*'],
         'cantera': ["@py_extension@", '*.pxd'],
     },
