[SCons] Link to yaml-cpp when using system libs
Similar to the system_sundials option, libyaml-cpp must be added to the
linker line when the system libraries are used.

--- a/src/SConscript
+++ b/src/SConscript
@@ -87,6 +87,9 @@ if localenv['blas_lapack_libs']:
 if localenv['system_fmt']:
     localenv.Append(LIBS='fmt')
 
+if localenv['system_yamlcpp']:
+    localenv.Append(LIBS=['yaml-cpp'])
+
 # Build the Cantera shared library
 if localenv['layout'] != 'debian':
     if localenv['renamed_shared_libraries']:
