[Input/Scons] make gri30 consistent with latest online version
Updated version keeps input and thermo separate, which requires minor
changes in the build scripts.

--- a/interfaces/cython/SConscript
+++ b/interfaces/cython/SConscript
@@ -26,7 +26,9 @@ testFiles = localenv.RecursiveInstall('#interfaces/cython/cantera/test/data',
                                       '#test/data')
 build(testFiles)
 
-for f in ['inputs/h2o2.inp', 'inputs/gri30.inp', 'transport/gri30_tran.dat']:
+inputFiles = ['inputs/h2o2.inp', 'inputs/gri30.inp',
+              'transport/gri30_tran.dat', 'thermo/gri30_thermo.dat']
+for f in inputFiles:
     inp = build(localenv.Install('#interfaces/cython/cantera/test/data/', '#data/' + f))
     testFiles.append(inp)
 
