--- a/interfaces/cython/setup.py.in
+++ b/interfaces/cython/setup.py.in
@@ -71,6 +71,9 @@ setup(
         'console_scripts': [
             'ck2cti=cantera.ck2cti:script_entry_point',
             'ctml_writer=cantera.ctml_writer:main',
+            'ck2yaml=cantera.ck2yaml:script_entry_point',
+            'cti2yaml=cantera.cti2yaml:main',
+            'ctml2yaml=cantera.ctml2yaml:main',
         ],
     },
     classifiers=[
@@ -96,4 +99,5 @@ setup(
         'cantera.examples': ['*/*.*'],
         'cantera': ["@py_extension@", '*.pxd'],
     },
+    zip_safe=False,
 )
